# Purple-Portal

./: .gitignore  Cargo.toml  LICENSE  readme.md  wasm-test.html
.github/workflows/: run-workspace-tests.yaml  wasm-check.yaml
cli/: Cargo.toml
cli/src/: main.rs  tokio_fs_adapter.rs  tungstenite_ws_client.rs
cli/src/models/: input.rs
cli/src/models/input/: cli_root.rs
client/: Cargo.toml
client/src/: dir_hash_walker.rs  error.rs  lib.rs  models.rs  prelude.rs  recursive_read_dir.rs  shared.rs  state_manager.rs  traits.rs  utils.rs
client/src/fs_adapters/: mod.rs  tokio_fs_adapter.rs
client/src/models/: client_info.rs  local_state.rs  ws_messages.rs
client/src/tests/: mod.rs
client/src/traits/: fs_adapter.rs  ws_client.rs
client/src/utils/: diff.rs  diff_key_value.rs
server/: Cargo.toml
server/src/: client.rs  error.rs  lib.rs
server/src/client/: client_error.rs  handle_incoming_message.rs  socket_message.rs
server/src/models/: mod.rs  remote_op_log.rs
server/src/modules/: mod.rs
server/src/modules/cors/: fairings.rs  mod.rs  routes.rs
server/src/modules/cors/routes/: option_catch_all.rs
server/src/modules/procedures/: mod.rs  procedures_manager.rs  wrapped_receiver.rs
server/src/modules/procedures/models/: mod.rs  procedure_kind.rs  procedure_ref.rs
server/src/modules/procedures/procedures/: mod.rs  test_procedure.rs
server/src/modules/procedures/traits/: mod.rs  procedure.rs  procedure_executor.rs
server/src/modules/signalling_manager/: mod.rs
server/src/modules/signalling_manager/models/: mod.rs
server/src/modules/vault_manager/: error.rs  mod.rs
server/src/modules/ws_client/: error.rs  mod.rs
server/src/modules/ws_client/models/: client_info.rs  mod.rs  ws_messages.rs
server/src/utils/: mod.rs  safe_join.rs
wasm/: Cargo.toml  defined-in-js.js
wasm/src/: js_fs_adapter.rs  js_ws_client.rs  lib.rs
yrs-testing/: Cargo.toml
yrs-testing/src/: main.rs
