[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.43"
server = { path = "../server" }
client = { path = "../client" }
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt"] }
async-trait = "0.1.71"
