[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.43"
tokio = { version = "1.27.0" }
async-recursion = "1.0.4"
serde = { version = "1.0.167", features = ["derive"] }
serde_bencode = "^0.2.3"
bincode = "1.3.3"

[features]
default = ["native"]
native = ["tokio/fs"]
wasm = []
