[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["sync", "macros", "rt-multi-thread", "fs", "time"] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
tokio-tungstenite = "0.19.0"
thiserror = "1.0.44"
diamond-types = { version = "1.0.0", features = ["serde"] }
futures-util = "0.3.28"
serde_json = "1.0.104"
async-trait = "0.1.72"
